--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.3
+  sdk: ^3.4.3
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -57,6 +57,19 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/pt.jpg
+    - assets/pt2.jpg
+    - assets/pt3.jpeg
+    - assets/pt4.jpg
+    - assets/pt5.jpg
+    - assets/pt6.jpg
+    - assets/pt7.jpg
+    - assets/pt8.jpg
+    - assets/pt9.jpg
+    - assets/pt10.jpg
+    - assets/logo.png
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
