--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,3 +27,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
+    - assets/boy.png
+    - assets/grass.jpg
+    - assets/apple.png
